# nvmconfigs

./: .luatest.lua  README.md  fsharp.fsx  fsharp.snippets  init.lua  luatest.lua  markdowntest.md  md.md  paket.dependencies  paket.references
after/ftplugin/: lua.lua
lua/: filetypes.lua  keymaps.lua  lazy-plugins.lua
lua/utils/: navigation.lua  spelling.lua
snippets/UltiSnips/: lua.snippets  (+2 more)
src/: grammar.json  node-types.json  parser.c
tree-sitter/tree-sitter-paketref/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/tree-sitter-paketref/bindings/c/: tree-sitter-paketref.pc.in
tree-sitter/tree-sitter-paketref/bindings/c/tree_sitter/: tree-sitter-paketref.h
tree-sitter/tree-sitter-paketref/bindings/go/: binding.go  binding_test.go
tree-sitter/tree-sitter-paketref/bindings/node/: binding.cc  index.js
tree-sitter/tree-sitter-paketref/bindings/python/tests/: test_binding.py
tree-sitter/tree-sitter-paketref/bindings/python/tree_sitter_paketref/: __init__.py  binding.c
tree-sitter/tree-sitter-paketref/bindings/rust/: build.rs  lib.rs
tree-sitter/tree-sitter-paketref/bindings/swift/TreeSitterPaketrefTests/: TreeSitterPaketrefTests.swift
tree-sitter/tree-sitter-paketref/samples/: paket.references
tree-sitter/tree-sitter-paketref/src/: grammar.json  node-types.json  parser.c
tree-sitter/tree-sitter-snippets/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/tree-sitter-snippets/bindings/c/: tree-sitter-snippets.pc.in
tree-sitter/tree-sitter-snippets/bindings/go/: binding.go  binding_test.go
tree-sitter/tree-sitter-snippets/bindings/node/: binding.cc  index.js
tree-sitter/tree-sitter-snippets/bindings/python/tests/: test_binding.py
tree-sitter/tree-sitter-snippets/bindings/python/tree_sitter_snippets/: __init__.py  binding.c
tree-sitter/tree-sitter-snippets/bindings/rust/: build.rs  lib.rs
tree-sitter/tree-sitter-snippets/bindings/swift/TreeSitterSnippets/: snippets.h
tree-sitter/tree-sitter-snippets/bindings/swift/TreeSitterSnippetsTests/: TreeSitterSnippetsTests.swift
tree-sitter/tree-sitter-snippets/samples/: sql.snippets
tree-sitter/tree-sitter-snippets/src/: grammar.json  node-types.json  parser.c
(+25 files in other folders)
